<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="azfamily.ge14countdown.fragment.About">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/button_twitter_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                android:alpha="20"
                android:visibility="visible"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:elevation="5dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                android:alpha="20"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/info"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:drawableLeft="@drawable/ic_school_black_24dp"
                        android:drawablePadding="15dp"
                        android:drawableTint="@android:color/darker_gray"
                        android:linksClickable="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/university" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:drawableLeft="@drawable/ic_006_shapes"
                        android:drawablePadding="15dp"
                        android:linksClickable="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/info2" />

                    <TextView
                        android:id="@+id/tv_like"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:clickable="true"
                        android:drawableLeft="@drawable/ic_005_social"
                        android:drawablePadding="15dp"
                        android:drawableTint="@color/a_bit_dark"
                        android:linksClickable="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/why"
                        android:background="?attr/selectableItemBackground"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:alpha="20"
                android:visibility="visible"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/derma"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_btc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:contextClickable="true"
                        android:drawableLeft="@drawable/ic_011_money_4"
                        android:drawablePadding="15dp"
                        android:linksClickable="true"
                        android:longClickable="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/bitcoin"
                        android:background="?attr/selectableItemBackground"/>

                    <TextView
                        android:id="@+id/tv_eth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:contextClickable="true"
                        android:drawableLeft="@drawable/ic_010_money_5"
                        android:drawablePadding="15dp"
                        android:linksClickable="true"
                        android:longClickable="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/ethereum"
                        android:background="?attr/selectableItemBackground"/>

                    <TextView
                        android:id="@+id/tv_ltc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:contextClickable="true"
                        android:drawableLeft="@drawable/ic_007_money_8"
                        android:drawablePadding="15dp"
                        android:linksClickable="true"
                        android:longClickable="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/litecoin" />

                    <TextView
                        android:id="@+id/tv_paypal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:contextClickable="true"
                        android:drawableLeft="@drawable/ic_003_business"
                        android:drawablePadding="15dp"
                        android:linksClickable="true"
                        android:longClickable="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/paypal"
                        android:visibility="gone" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:alpha="20"
                android:visibility="visible"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/support"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:drawableLeft="@drawable/ic_star_black_24dp"
                        android:drawablePadding="15dp"
                        android:drawableTint="@android:color/darker_gray"
                        android:paddingBottom="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="5dp"
                        android:text="@string/rate"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_share"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_share_black_24dp"
                        android:drawablePadding="15dp"
                        android:drawableTint="@android:color/darker_gray"
                        android:paddingBottom="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="5dp"
                        android:text="@string/share"
                        android:textSize="12sp"
                        android:background="?attr/selectableItemBackground"/>

                    <TextView
                        android:id="@+id/tv_feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:drawableLeft="@drawable/ic_feedback_black_24dp"
                        android:drawablePadding="15dp"
                        android:drawableTint="@android:color/darker_gray"
                        android:paddingBottom="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="5dp"
                        android:text="@string/feedback"
                        android:textSize="12sp"
                        android:background="?attr/selectableItemBackground"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
